...
    <string name="role_bodyguard">bodyguard</string>
    <string name="role_customer">customer</string>
    <string name="role_none">none</string>
    <!-- /Tools -->

    <!-- Settings -->
    <string name="action_logout">Logout</string>
    <string name="success_logout">Successfully logged out!</string>
    <string name="can_not_logout">You are not logged in, so you can not logout!</string>
    <string name="action_settings">Settings</string>
    <string name="text_testtings">Settings are not created yet.</string>
    <!-- /Settings -->

...
    <string name="error_not_valid_5_50">Please enter a valid text, between 5 and 50 characters!</string>

    <!-- /Error -->

    <!-- APP -->
    <string name="app_name">TicketMachine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ticket Machine</string>
    <string name="nav_header_subtitle">ticket.machine@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="home_second">Home Second</string>
...

    <!--Navigation-->
    <string name="menu_home">Home</string>
    <string name="menu_events">Parties</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_register">Register</string>
    <string name="menu_login">Login</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_scanner">Scanner</string>
    <string name="menu_events_manage">Manage Parties</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
...
    <string name="login_entrance_image_view">Entrance</string>
    <string name="btn_text_login">Login</string>
    <!-- /Login -->

    <!--Events-->
    <string name="events_first_header">Events</string>
    <string name="btn_buyticket">Buy ticket</string>
    <!--/Events-->

    <!--Tickets-->
    <string name="tickets_first_header">Tickets</string>
    <string name="qrcode_btn_text">Generate QR</string>
    <string name="qrcode_input_description">Enter QR code string</string>
    <string name="qrcode_image_container_description">QR code</string>
    <string name="title_activity_accounts">AccountsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
...
