...
        android:layout_width="353dp"
        android:layout_height="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_text_email_address"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_entrance_image_view"/>
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/hint_text_password"
        android:importantForAutofill="no"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"/>
    <Button
        android:id="@+id/login_btn"
        android:text="@string/btn_text_login"
        android:importantForAutofill="no"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
...
