<?xml version="1.0" encoding="utf-8"?>
<ImageView android:id="@+id/ticket_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:contentDescription="@string/qrcode_image_container_description"
    android:src="@android:drawable/screen_background_light"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/generateQRButton"
    tools:context=".ui.tickets.TicketFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" />